=======
usbpsu_v1_4:
Modify USBPSU driver code to fit USB common example code for all USB IPs
Added support for flushing Dcache for setupdata packet for control ep's
>>>>>>> drivers: usbpsu: change driver for adding common example code for all USB IPs
=======
>>>>>>> drivers: usbpsu: Add common mass storage example changes
=======
Changed the dfu examples to be in sync with common example code
>>>>>>> drivers: usbpsu: Change dfu example code to be in sync with common example code

Changes for 2017.4
===============================

qspipsu_v1_6:
Flow for accessing flash parts with size more then 16MB
made similar to u-boot and linux.(CR#984966)
ICCARM compiler does not support __attribute__ syntax,
instead #pragma is used for the similar functionality.(CR#988625)

ttcps_v3_5:
Updates XTtcPs_GetMatchValue and XTtcPs_SetMatchValue APIs
to use correct match register width for zynq  (i.e. 16 bit)
and zynq ultrascale+mpsoc (i.e. 32 bit). It fixes CR#986617

v_csi2txss_v1_1:
Exporting ulps API to subsystem

sdps_v3_3:
Use different commands for single and multi block transfers

emacps_v3_6:
Export PL PCS PMA information for ETH1/2/3- CR-984847.

qspipsu_v1_6:
Flow for accessing flash parts with size more then 16MB made similar to
u-boot and linux.(CR#984966) ICCARM compiler does not support
__attribute__ syntax, instead #pragma is used for the similar
functionality.(CR#988625)

axidma_v9_5:
CR#987026 Fixed issue poll_multi_pkt example fails on a53
Fixed race condition in the XAxiDma_Reset() API.
CR#988210 Add interface to query config based on base addr.

lwip141_2_0:
Correct assigment of TX BD ring in init_dma() and
emacps_error_handler().
CR#988210 Perform AXI DMA lookup based on base address.

zdma_v1_4:
Fixed compilation errors for IAR compiler.

zynqmp_pmufw:
- Exported efuse IP disable as part of version string in PmGetChipid to
recognize eg/cg/ev devices
- Enabled Optimize for size compiler flag in HSI flow