@@ -43,11 +43,15 @@
  * ----- ---- 	-------- -------------------------------------------------------
  * 1.0   BK 	12/01/18 First release
 <<<<<<< HEAD
+<<<<<<< HEAD
  *	 MYK	12/01/18 Added hibernation support for device mode
  *	 vak	13/03/18 Moved the setup interrupt system calls from driver to
  *			 example.
 =======
 >>>>>>> drivers: usbpsu: change driver for adding common example code for all USB IPs
+=======
+ *	 MYK	12/01/18 Added hibernation support for device mode
+>>>>>>> drivers: usbpsu: Add hibernation support for usb
  *
  * </pre>
  *
@@ -227,10 +231,14 @@ s32 EpEnable(void *InstancePtr, u8 UsbEpNum, u8 Dir, u16 Maxsize, u8 Type)
 {
 	return XUsbPsu_EpEnable((struct XUsbPsu *)InstancePtr, UsbEpNum, Dir,
 <<<<<<< HEAD
+<<<<<<< HEAD
 			Maxsize, Type, FALSE);
 =======
 			Maxsize, Type);
 >>>>>>> drivers: usbpsu: change driver for adding common example code for all USB IPs
+=======
+			Maxsize, Type, FALSE);
+>>>>>>> drivers: usbpsu: Add hibernation support for usb
 }
 
 s32 EpDisable(void *InstancePtr, u8 UsbEpNum, u8 Dir)
@@ -328,10 +336,14 @@ void SetEpInterval(void *InstancePtr, u8 UsbEpNum, u8 Dir, u32 Interval)
 void StopTransfer(void *InstancePtr, u8 EpNum, u8 Dir)
 {
 <<<<<<< HEAD
+<<<<<<< HEAD
 	XUsbPsu_StopTransfer((struct XUsbPsu *)InstancePtr, EpNum, Dir, TRUE);
 =======
 	XUsbPsu_StopTransfer((struct XUsbPsu *)InstancePtr, EpNum, Dir);
 >>>>>>> drivers: usbpsu: change driver for adding common example code for all USB IPs
+=======
+	XUsbPsu_StopTransfer((struct XUsbPsu *)InstancePtr, EpNum, Dir, TRUE);
+>>>>>>> drivers: usbpsu: Add hibernation support for usb
 }
 
 s32 StreamOn(void *InstancePtr, u8 EpNum, u8 Dir, u8 *BufferPtr)
